--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
 , "scripts" : { "test" : "make test" }
 , "engines" : { "node" : ">= 0.8.0" }
 , "dependencies" :
-  { "pinba"  : "~1.0.0-beta2" }
+  { "pinba"  : "~1.0.0" }
 , "devDependencies" :
-  { "mocha"   : "~1.16.2"
+  { "mocha"   : "~2.1.0"
   , "connect" : "~2.12.0"
-  , "jshint"  : "~2.4.1"
-  , "ndoc"    : "~3.1.0"
+  , "jshint"  : "~2.5.11"
   }
 }
