--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   { "pinba"  : "~1.0.0" }
 , "devDependencies" :
   { "mocha"   : "~2.1.0"
+  , "sinon"   : "~1.12.2"
   , "connect" : "~2.12.0"
   , "jshint"  : "~2.5.11"
   }
