--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 , "description" : "Pinba middleware for Connect"
 , "keywords" : ["pinba", "monitoring", "profiling", "connect", "middleware"]
 , "homepage" : "http://sannis.github.com/connect-pinba"
-, "version" : "1.0.0-beta2"
+, "version" : "1.0.0"
 , "author" :
   { "name" : "Oleg Efimov"
   , "email" : "efimovov@gmail.com"
